<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvPtCusNo" />

        <EditText
            android:id="@+id/etIdCusNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/htCusNo"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/TextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvPtCusNa" />

        <EditText
            android:id="@+id/etIdCusNa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/htCusNa"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/TextView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvPtCusPho" />

        <EditText
            android:id="@+id/etIdCusPho"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/htCusPho" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/TextView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvPtCusAdd" />

        <EditText
            android:id="@+id/etIdCusAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/htCusAdd" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btIdIns"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btPtIns" />

        <Button
            android:id="@+id/btIdCls"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btPtCls" />

        <Button
            android:id="@+id/btIdList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btPtList" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btIdQry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btPtQry" />

        <Button
            android:id="@+id/btIdEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btPtEdit" />

        <Button
            android:id="@+id/btIdDel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btPtDel" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvIdHead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvPtHead" />

    <EditText
        android:id="@+id/etIdResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name" />

</LinearLayout>